[package]
name = "among-us-dumpy"
version = "0.1.0"
authors = ["Elias De Maertelaere <elias.demaertelaere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.24.5"
rayon="1.6.0"

[profile.release]
lto="fat"
codegen-units=1
panic="abort"
