[package]
name = "among-us-dumpy"
version = "0.1.0"
authors = ["Elias De Maertelaere <elias.demaertelaere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image="0.25.1"
rayon="1.10.0"

[profile.release]
lto="fat"
codegen-units=1
panic="abort"
